@@ -269,7 +269,7 @@ class JSession extends JObject
 				require_once(dirname(__FILE__).DS.'storage'.DS.$name.'.php');
 			}
 
-			if (call_user_func_array(array(trim($class), 'test'), null)) {
+			if (call_user_func_array(array(trim($class), 'test'), array())) {
 				$names[] = $name;
 			}
 		}
