@@ -27,6 +27,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+29-Sep-2009 Gergo Erdosi
+ # Fixed some call_user_func_array() bugs.
 
 28-Sep-2009 Ron Severdia
 # Fix visual issues in config/menus/users
